[package]
name = "aisa-tr-2026-470b-core"
version = "1.0.0"
edition = "2021"
description = "Official implementation of the SISCC protocol for sovereign hardware auditing and 279030F6 anchor synchronization"
authors = ["AISA Sovereign Technologies"]
license = "Apache-2.0"
repository = "https://github.com/yourorg/AISA-TR-2026-470B-CORE"
keywords = ["hardware", "audit", "siscc", "aisa", "470B", "security", "sovereign"]
categories = ["security", "hardware"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[features]
default = ["std"]
std = []

[lib]
name = "aisa_tr_2026_470b_core"
path = "src/lib.rs"

[[bin]]
name = "aisa-audit-cli"
path = "src/main.rs"
